gImageReader 3.2.2 (Jun 30 2017):
* Attempt to use original source image for PDF output
* Allow collapsing/expanding branches of hOCR tree via context menu
* Recognize guillemets as quote characters
* Fix crash when adding zero-page sources
* Fix possible crash when rapidly switching documents
* [Gtk] Fix output pane orientation not properly restored
* [Gtk] Don't crash when rendering of image fails
* [Gtk] Fix icons not appearing with recent Gtk versions
* [Qt] Don't display empty image if rendering of downscaled image fails

gImageReader 3.2.1 (Feb 10 2017):
* Add possibility to rotate individual pages of multipage documents
* Ensure the tessdata manager downloads compatible tesseract languge definitions
* Add CCITT Group4 compression option for monochrome PDF export
* Allow choosing between diffuse and threshold dithering for monochrome PDF export
* Preview JPEG compression quality in PDF output preview
* Make brightness/contrast/resolution changes affect all selected sources
* [Qt] Support multipage images through QImageReader (Qt5.9+ will support multipage TIFFs)
* [Gtk] Fix hang when saving selection image
* [Qt] Fix possible deadlock when rapidly switching sources
* Updated translations

gImageReader 3.2.0 (Nov 23 2016):
 * gImageReader 3.2.0 stable
 * Add PageUp / PageDown keyboard accelerators for browsing multipage documents
 * See 3.1.9x changelogs for all other feature changes since previous stable
 * Many bug fixes since 3.1.99 - special thanks to Daniel Plakhotich
 * Full details in commit log: https://github.com/manisandro/gImageReader/commits/master

gImageReader 3.1.99 (Oct 13 2016):
 * gImageReader 3.2 release candidate
 * General improvements:
   - Catch critical tesseract errors which otherwise result in the application crashing
   - Improve spelling dictionary auto-installation logic
   - Allow choosing whether to store language files (language definitions, spelling dictionaries) in system-wide or user-local directories